<resources>
    <string name="home_card">卡片</string>
    <string name="home_article">文章</string>
    <string name="home_rank">榜单</string>
    <string name="home_circle">圈子</string>
    <string name="home_my">我的</string>

    <string name="tv_my_collect">收藏</string>
    <string name="tv_common_setting_clean_cache">清理缓存</string>
    <string name="tv_common_setting_night_model">夜间</string>
    <string name="tv_user_info_head">头像</string>
    <string name="tv_user_info_nick_name">昵称</string>
    <string name="tv_user_info_birthday">生日</string>
    <string name="tv_user_info_sex">性别</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_complete">完成</string>
    <string name="wechat">微信</string>
    <string name="moments">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="copy">复制链接</string>
    <string name="network_error">网络异常</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="tv_user_safety_wechat">微信</string>
    <string name="no_binding">未绑定</string>
    <string name="is_binding">已绑定</string>
    <string name="tv_user_safety_qq">QQ</string>
    <string name="tv_user_safety_weibo">微博</string>
    <string name="help_1">如何收藏卡片</string>
    <string name="help_2">批量删除收藏夹文章的方法</string>
    <string name="help_3">如何修改收藏夹名字</string>
    <string name="help_4">如何添加/删减兴趣卡包</string>
    <string name="help_5">如何修改个人信息</string>
    <string name="help_6">如何修改消息推送</string>
    <string name="login_timeout">登录超时，请重新登录</string>
    <string name="tv_login_count_down">%1$d&#160;s</string>
    <string name="agreement">智者用户协议</string>
    <string name="agreement_url">/pages/user-protocol.html</string>
    <string name="agreement_dark_url">/pages/user-protocol-dark.html</string>
    <string name="creation_agreement_url">/pages/create-protocol.html</string>
    <string name="creation_agreement_dark_url">/pages/create-protocol-dark.html</string>
    <string name="create_circle">/pages/circle-refer.html</string>
    <string name="help_1_url">/help/help1.html</string>
    <string name="help_2_url">/help/help2.html</string>
    <string name="help_3_url">/help/help3.html</string>
    <string name="help_4_url">/help/help4.html</string>
    <string name="help_5_url">/help/help5.html</string>
    <string name="help_6_url">/help/help6.html</string>

    <!--common-start-->
    <string name="common_refresh_complete">内容已刷新</string>
    <string name="channel_unbind_title">是否解除%1$s绑定？</string>
    <string name="tv_item_card_note_info">%1$s&#160;&#160;&#160;%2$s</string>
    <string name="tv_feedback_residue">%1$d/%2$d</string>
    <string name="tv_refresh_text">已为你刷新%1$d张卡片</string>
    <string name="tv_dialog_phone_confirm_title">是否以手机号%1$s接收验证码?</string>
    <string name="tv_item_message_value">+%1$d</string>
    <string name="tv_dynamic_message_no_data">暂无内容</string>
    <string name="tv_dynamic_message_follow">%1$s&#160;等人最近关注了你&#8230;</string>
    <string name="tv_dynamic_message_comment">%1$s&#160;等人最近评论了你&#8230;</string>
    <string name="tv_dynamic_message_like">%1$s&#160;等人最近给你点赞了&#8230;</string>
    <string name="tv_dynamic_message_collect">%1$s&#160;等人最近收藏了你的创作&#8230;</string>
    <string name="tv_item_intelligence_value_progress">%1$d/%2$d</string>
    <string name="user_info_change">保存成功</string>
    <string name="card_details_dark_url">/p/Dark/</string>
    <string name="card_details_light_url">/p/Light/</string>
    <string name="card_share_url">/pages/long-share.html?id=</string>
    <string name="card_share_url2">/pages/share-cardLink.html?id=</string>
    <string name="creation_preview_url">/pages/preview.html?id=</string>
    <string name="note_editor_url">/pages/note-editor.html</string>
    <string name="creation_editor_url">/pages/card-editor.html</string>
    <string name="intelligence_url">/pages/intelligence.html</string>
    <string name="send_verification_code_success">验证码发送成功，请留意接收</string>
    <string name="et_comment_hint">回复&#160;%1$s</string>
    <string name="versions">版本号：&#160;%1$s</string>
    <string name="tv_level">Lv.%1$d</string>
    <!--common-end-->

    <!--transitionNameStart-->
    <string name="card_img_transition_name">cardImg%1$d</string>
    <string name="card_title_transition_name">cardTitle%1$d</string>
    <string name="card_category_transition_name">cardCategory%1$d</string>
    <string name="card_label_transition_name">cardLabel%1$d</string>
	<!--transitionNameEnd-->

    <!--down and update-->
    <string name="android_auto_update_dialog_title">发现新版本</string>

    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <!--down and update-->

    <!-- 圆角星星 -->
    <string name="round_star">
        M333.312 257.856c-8.832 16.512-22.208 27.264-36.224 28.736l-208.64 30.272C8.064 330.24-23.68 430.528 33.664 490.176l150.016 150.912a52.48 52.48 0 0 1 14.848 44.928l-36.352 214.08c-12.864 83.648 70.784 147.072 141.632 106.88l185.472-100.288a42.752 42.752 0 0 1 44.8-0.256l186.56 100.8c70.464 39.936 154.048-23.488 141.312-106.752l-36.416-213.952a60.16 60.16 0 0 1 15.104-45.696l149.376-150.464c57.728-59.968 25.984-160.192-53.888-173.504l-208.256-30.144c-16.512-3.456-30.912-14.208-36.8-27.968L598.912 61.888A94.464 94.464 0 0 0 425.024 62.08L333.312 257.856m0 0
    </string>

    <string name="star_select">
        M16.3205,7.5428C16.6994,7.5979 17.457,7.708 17.457,7.708C18.5808,7.8713 18.835,8.6439 18.0306,9.428L14.6217,12.7509L15.4264,17.4429C15.6169,18.5537 14.9595,19.0273 13.9652,18.5046L9.7515,16.2893L5.5378,18.5046C4.5403,19.029 3.8867,18.5501 4.0766,17.4429L4.8813,12.7509L1.4724,9.428C0.6654,8.6414 0.9189,7.8718 2.0305,7.7102L6.7416,7.0257L8.8484,2.7567C9.3472,1.7461 10.1574,1.7494 10.6546,2.7567L12.7614,7.0257
    </string>

</resources>
