<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="15dp"
	android:paddingBottom="15dp"
	android:paddingLeft="20dp"
	android:paddingRight="20dp"
	android:orientation="horizontal">
	
	<com.zxcx.zhizhe.widget.DatePickerView
		android:id="@+id/year_pv"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:layout_weight="2"/>
	
	<TextView
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="left|center_vertical"
		android:text="@string/year"
		android:textColor="@color/text_color_3"
		android:textSize="12sp"/>
	
	<com.zxcx.zhizhe.widget.DatePickerView
		android:id="@+id/month_pv"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:layout_weight="1"/>
	
	<TextView
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="left|center_vertical"
		android:text="@string/month"
		android:textColor="@color/text_color_3"
		android:textSize="12sp"/>
	
	<com.zxcx.zhizhe.widget.DatePickerView
		android:id="@+id/day_pv"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:layout_weight="1"/>
	
	<TextView
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="left|center_vertical"
		android:text="@string/day"
		android:textColor="@color/text_color_3"
		android:textSize="12sp"/>
	
	<com.zxcx.zhizhe.widget.DatePickerView
		android:id="@+id/hour_pv"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:layout_weight="1"/>
	
	<TextView
		android:id="@+id/hour_text"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="left|center_vertical"
		android:text="@string/hour"
		android:textColor="@color/button_blue"
		android:textSize="12sp"/>
	
	<com.zxcx.zhizhe.widget.DatePickerView
		android:id="@+id/minute_pv"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:layout_weight="1"/>
	
	<TextView
		android:id="@+id/minute_text"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="left|center_vertical"
		android:text="@string/minute"
		android:textColor="@color/button_blue"
		android:textSize="12sp"/>

</LinearLayout>