<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_dialog"
	android:orientation="vertical">
	
	<TextView
		android:id="@+id/tv_dialog_phone_confirm_title"
		android:textStyle="bold"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:text="@string/tv_dialog_phone_confirm_title"
		android:textColor="@color/text_color_2"
		android:textSize="@dimen/text_size_text_1"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_below="@+id/tv_dialog_phone_confirm_title">
		
		<TextView
			android:id="@+id/tv_dialog_cancel"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="15dp"
			android:paddingBottom="16dp"
			android:paddingStart="15dp"
			android:gravity="center_vertical"
			android:text="@string/common_cancel"
			android:textColor="@color/text_color_1"
			android:textSize="17sp"/>
		
		<TextView
			android:id="@+id/tv_dialog_confirm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="15dp"
			android:paddingBottom="16dp"
			android:paddingEnd="15dp"
			android:gravity="center_vertical|end"
			android:text="@string/common_confirm"
			android:textColor="@color/button_blue"
			android:textSize="17sp"/>
	
	</LinearLayout>

</RelativeLayout>