<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:orientation="vertical"
	tools:context="com.zxcx.zhizhe.ui.my.feedback.help.HelpActivity">
	
	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"/>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background"
			android:orientation="vertical">
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginTop="@dimen/fragment_interval"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_1"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_1"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginLeft="15dp"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_2"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_2"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginLeft="15dp"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_3"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_3"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginLeft="15dp"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_4"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_4"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginLeft="15dp"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_5"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_5"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginLeft="15dp"
				android:background="@color/line"/>
			
			<LinearLayout
				android:id="@+id/ll_help_6"
				android:layout_width="match_parent"
				android:layout_height="50dp">
				
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="15dp"
					android:layout_gravity="center"
					android:text="@string/help_6"
					android:textColor="@color/text_color_2"
					android:textSize="@dimen/text_size_text_1"/>
				
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_gravity="center"
					android:src="@drawable/common_into"/>
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/line"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
