<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:orientation="vertical">
	
	<include layout="@layout/toolbar"/>
	
	<LinearLayout
		android:id="@+id/ll_user_safety_phone_bind"
		android:layout_width="match_parent"
		android:layout_height="65dp"
		android:background="@color/background"
		android:gravity="center_vertical">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:text="手机号"
			android:textColor="@color/text_color_1"
			android:textSize="@dimen/text_size_text_1"/>
		
		<TextView
			android:id="@+id/tv_user_safety_phone_bind_status"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="5dp"
			android:gravity="right"
			android:text="@string/is_binding"
			android:textColor="@color/button_blue"
			android:textSize="@dimen/text_size_text_2"/>
		
		<include layout="@layout/iv_right_into"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/ll_user_safety_qq_bind"
		android:layout_width="match_parent"
		android:layout_height="65dp"
		android:gravity="center_vertical">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:text="@string/tv_user_safety_qq"
			android:textColor="@color/text_color_1"
			android:textSize="@dimen/text_size_text_1"/>
		
		<TextView
			android:id="@+id/tv_user_safety_qq_bind_status"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="5dp"
			android:gravity="right"
			android:text="@string/is_binding"
			android:textColor="@color/text_color_3"
			android:textSize="@dimen/text_size_text_2"/>
		
		<include layout="@layout/iv_right_into"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/ll_user_safety_wechat_bind"
		android:layout_width="match_parent"
		android:layout_height="65dp"
		android:gravity="center_vertical">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:text="@string/tv_user_safety_wechat"
			android:textColor="@color/text_color_1"
			android:textSize="@dimen/text_size_text_1"/>
		
		<TextView
			android:id="@+id/tv_user_safety_wechat_bind_status"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="5dp"
			android:gravity="right"
			android:text="@string/is_binding"
			android:textColor="@color/text_color_3"
			android:textSize="@dimen/text_size_text_2"/>
		
		<include layout="@layout/iv_right_into"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/ll_user_safety_weibo_bind"
		android:layout_width="match_parent"
		android:layout_height="65dp"
		android:gravity="center_vertical">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:text="@string/tv_user_safety_weibo"
			android:textColor="@color/text_color_1"
			android:textSize="@dimen/text_size_text_1"/>
		
		<TextView
			android:id="@+id/tv_user_safety_weibo_bind_status"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="5dp"
			android:gravity="right"
			android:text="@string/is_binding"
			android:textColor="@color/text_color_3"
			android:textSize="@dimen/text_size_text_2"/>
		
		<include layout="@layout/iv_right_into"/>
	
	</LinearLayout>

</LinearLayout>
