<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/ll_share_wechat"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                
                <ImageView
                    android:src="@drawable/wechat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/wechat"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_moments"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/moments"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/moments"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_qq"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/qq"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/qq"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_qzone"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/qzone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/qzone"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/ll_share_weibo"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/weibo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/weibo"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_copy"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/copy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="9dp"
                    android:text="@string/copy"
                    android:textSize="@dimen/text_size_text_3"
                    android:textColor="@color/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>


            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:background="@drawable/bg_dialog"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="取消"
        android:textSize="@dimen/text_size_text_1"
        android:textColor="@color/button_blue"
        android:layout_width="match_parent"
        android:layout_height="57dp"/>

</LinearLayout>